implemented save discontinuous value and board

--- a/taiwan_cgi/.gitignore
+++ b/taiwan_cgi/.gitignore
@@ -17,3 +17,4 @@ tuple_network_it_8192.data
 trainingResult(Binary)_8192Appear.txt
 trainingResult(Binary)_16384_8192Appear.txt
 trainingResult(Binary)_before8192.txt
+discontinueLog/
