--- a/szu_clone/Makefile
+++ b/szu_clone/Makefile
@@ -1,6 +1,6 @@
 CXX = g++
 CXXFLAGS = -g -std=c++11
-OBJS = test.o board/boardPos.o board/boardPosList.o board/boardUtils.o board/rectSize.o
+OBJS = test.o board/boardPos.o board/boardPosList.o board/boardUtils.o board/rectSize.o game2048/action2048.o game2048/game2048Board.o game2048/state2048.o NTuplePlayer2048.o game2048/game2048.o util/arrayUtils.o util/collectionUtils.o util/randomUtils.o util/summaryStatistics.o
 
 all: clean program
 
