--- a/szu_clone/NTuple/eval/Makefile
+++ b/szu_clone/NTuple/eval/Makefile
@@ -1,6 +1,6 @@
 CXX = g++
 CXXFLAGS = -g -std=c++11
-OBJS = NTuple.o NTuples.o NTuplesBuilder.o NTupleUtils.o eval/defaultNTupleEvaluator.o
+OBJS = defaultNTupleEvaluator.o
 
 all: clean program
 
