random player implemented

--- a/szu_clone/util/Makefile
+++ b/szu_clone/util/Makefile
@@ -1,10 +1,5 @@
-CXX = g++
-CXXFLAGS = -g -std=c++11
-OBJS = arrayUtils.o collectionUtils.o randomUtils.o summaryStatistics.o
-
-all: clean program
-
-program: $(OBJS)
-
-clean:
-	\rm -f *.o
+SRCS+=\
+	$(REL)arrayUtils.cpp\
+	$(REL)collectionUtils.cpp\
+	$(REL)randomUtils.cpp\
+	$(REL)summaryStatistics.cpp\
