--- a/szu_clone/board/Makefile
+++ b/szu_clone/board/Makefile
@@ -1,10 +1,5 @@
-CXX = g++
-CXXFLAGS = -g -std=c++11
-OBJS = boardPos.o boardPosList.o boardUtils.o rectSize.o
-
-all: clean program
-
-program: $(OBJS)
-
-clean:
-	\rm -f *.o
+SRCS+=\
+	$(REL)boardPos.cpp\
+	$(REL)boardPosList.cpp\
+	$(REL)boardUtils.cpp\
+	$(REL)rectSize.cpp\
