--- a/szu_clone/game2048/Makefile
+++ b/szu_clone/game2048/Makefile
@@ -1,10 +1,6 @@
-CXX = g++
-CXXFLAGS = -g -std=c++11
-OBJS = action2048.o game2048Board.o game2048.o state2048.o player2048.o
-
-all: clean program
-
-program: $(OBJS)
-
-clean:
-	\rm -f *.o
+SRCS+=\
+	$(REL)action2048.cpp\
+	$(REL)game2048Board.cpp\
+	$(REL)game2048.cpp\
+	$(REL)state2048.cpp\
+	$(REL)player2048.cpp\
