--- a/szu_clone/NTuple/eval/Makefile
+++ b/szu_clone/NTuple/eval/Makefile
@@ -1,10 +1,2 @@
-CXX = g++
-CXXFLAGS = -g -std=c++11
-OBJS = defaultNTupleEvaluator.o
-
-all: clean program
-
-program: $(OBJS)
-
-clean:
-	\rm -f *.o
+SRCS+=\
+	$(REL)defaultNTupleEvaluator.cpp\
