--- a/szu_clone/NTuple/factories/Makefile
+++ b/szu_clone/NTuple/factories/Makefile
@@ -1,10 +1,4 @@
-CXX = g++
-CXXFLAGS = -g -std=c++11
-OBJS = NTuplesAllRectanglesFactory.o NTuplesAllStraightFactory.o NTuplesGenericFactory.o
-
-all: clean program
-
-program: $(OBJS)
-
-clean:
-	\rm -f *.o
+SRCS+=\
+	$(REL)NTuplesAllRectanglesFactory.cpp\
+	$(REL)NTuplesAllStraightFactory.cpp\
+	$(REL)NTuplesGenericFactory.cpp\
