linker error modifying

--- a/szu_clone/Makefile
+++ b/szu_clone/Makefile
@@ -10,6 +10,7 @@ REL := util/
 include $(REL)Makefile
 REL := NTuple/
 include $(REL)Makefile
+SRCS+=NTuplePlayer2048.cpp
 SRCS+=CIG2048ExperimentTDL.cpp
 TARGET = a.out
 OBJS = $(SRCS:.cpp=.o)
