trying std::thread (not succeeded yet)

--- a/szu_clone/Makefile
+++ b/szu_clone/Makefile
@@ -11,7 +11,7 @@ include $(REL)Makefile
 REL := NTuple/
 include $(REL)Makefile
 SRCS+=NTuplePlayer2048.cpp
-SRCS+=CIG2048ExperimentTDL.cpp
+SRCS+=EXPERIMENT_THREAD.cpp
 TARGET = a.out
 OBJS = $(SRCS:.cpp=.o)
 TILDE = $(SRCS:.cpp=.cpp~)
