--- a/speed_szu_clone/Makefile
+++ b/speed_szu_clone/Makefile
@@ -12,7 +12,7 @@ REL := NTuple/
 include $(REL)Makefile
 SRCS+=NTuplePlayer2048.cpp
 SRCS+=CIG2048ExperimentTDL.cpp
-TARGET = 1beta_r3.out
+TARGET = 1c_r3.out
 OBJS = $(SRCS:.cpp=.o)
 TILDE = $(SRCS:.cpp=.cpp~)
 
